--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           $("#output").html("");
           window.web3 = web3Connect();
           if (typeof window.web3 !== 'undefined') {
-            var address = $("#address").html();
+            var address = $("#address").val();
             var wei = promisify(cb => window.web3.eth.getBalance(address, cb));
             try {
                 // See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/await
